# corrosion-one-49197

./: .crowdbotics.json  .env.template  .gitignore  Dockerfile  README.md  app.json  package.json
android/: settings.gradle
backend/: .gitignore  Dockerfile  README.md  docker-compose.override.yml  heroku.yml  manage.py  pyproject.toml
backend/.circleci/: generate_azure_config.sh
backend/backend/: middlewares.py  settings.py  storage_backends.py  urls.py
backend/bruno_collection/: Activate account with link.bru  Biometrics Login.bru  Biometrics Setup.bru  Change Password.bru  Continue With Apple.bru  Continue With Facebook.bru  Continue With Google.bru  Forgot Password.bru  Reset Password.bru  Sign In.bru  Sign up.bru  Verify Code.bru  bruno.json
backend/bruno_collection/environments/: base.bru
backend/chat/: apps.py  client.py  consumers.py  models.py  routing.py  serializers.py  urls.py  viewsets.py  webhooks.py
backend/chat/migrations/: 0001_initial.py
backend/configuration/: admin.py  configs.py  models.py  serializer.py  viewsets.py
backend/configuration/migrations/: 0001_initial.py
backend/corrosion_one_49197/: asgi.py  middlewares.py  settings.py  urls.py  wsgi.py
backend/home/: urls.py
backend/home/migrations/: 0001_load_initial_data.py
backend/inspector/: admin.py  models.py  serializers.py  urls.py  views.py
backend/inspector/migrations/: 0001_initial.py  0002_alter_inspector_options.py  0003_alter_inspector_user.py  0004_remove_inspector_cities_inspector_regions.py  0005_supportdocument.py  (+8 more)
backend/jobs/: admin.py  filters.py  helpers.py  models.py  serializers.py  urls.py  views.py
backend/notifications/: apps.py  models.py  serializers.py  urls.py  views.py
backend/owner/: admin.py  models.py  serializers.py  urls.py  views.py
backend/payments/: admin.py  helpers.py  models.py  serializers.py  signals.py  stripe_api.py  urls.py  views.py  webhooks.py
backend/scripts/: startup.sh
backend/users/: adapters.py  admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/web_build/: asset-manifest.json  index.html
(+716 files in other folders)
